# silver-garbanzo

./: Cargo.toml  README.md
benches/: pipeline_bench.rs
examples/: sample_obfuscated.lua
src/: error.rs  lib.rs  main.rs
src/code_gen/: emitter.rs  expr.rs  mod.rs  rename.rs  stmt.rs  sugar.rs
src/emu_layer/: mod.rs  resolver.rs  table.rs  value.rs  vm.rs
src/ir_engine/: cfg.rs  lift.rs  mod.rs  ssa.rs  structural.rs  types.rs
src/ir_engine/opt/: copy_prop.rs  dce.rs  fold.rs  mod.rs  opaque.rs  phi.rs  unreachable.rs
src/lua_parser/: ast.rs  compiler.rs  constants.rs  header.rs  instruction.rs  mod.rs  opcodes.rs  proto.rs  source.rs
src/profiles/: generic.rs  ironbrew.rs  luraph.rs  mod.rs  moonsec.rs  registry.rs
tests/: integration.rs
